--- a/2.html
+++ b/2.html
@@ -22,9 +22,9 @@
 <body>
 <h1><a href="index.html">WEB</a></h1>
 <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html"><font color="red">HTML</font></a></li>
+    <li><a href="2.html"><font color="red">CSS</font></a></li>
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
 </ol>
 <h2>CSS</h2>
 <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in
@@ -34,8 +34,7 @@
     This separation can improve content accessibility, provide more flexibility and control in the specification of
     presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a
     separate .css file, and reduce complexity and repetition in the structural content.</p>
-<p>
-<div id="disqus_thread"></div>
+<p><div id="disqus_thread"></div>
 <script>
 
     /**
@@ -47,15 +46,13 @@
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
-    (function () { // DON'T EDIT BELOW THIS LINE
+    (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
         s.src = 'https://web1-2.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
-    Disqus.</a></noscript>
-</p>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
 </body>
 </html>
