--- a/3.html
+++ b/3.html
@@ -7,11 +7,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136611912-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
+        function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-136611912-1');
@@ -27,35 +23,13 @@
     <li><a href="3.html">JavaScript</a></li>
 </ol>
 <h2>JavaScript</h2>
-<p>JavaScript (/ˈdʒɑːvəˌskrɪpt/), often abbreviated as JS, is a high-level, interpreted programming language that
-    conforms to the ECMAScript specification.
+<p>JavaScript (/ˈdʒɑːvəˌskrɪpt/), often abbreviated as JS, is a high-level, interpreted programming language that conforms to the ECMAScript specification.
     It is a programming language that is characterized as dynamic, weakly typed, prototype-based and multi-paradigm.
     Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web.
     JavaScript enables interactive web pages and is an essential part of web applications.
-    The vast majority of websites use it,[10] and major web browsers have a dedicated JavaScript engine to execute
-    it.</p>
+    The vast majority of websites use it,[10] and major web browsers have a dedicated JavaScript engine to execute it.</p>
 <p>
-<div id="disqus_thread"></div>
-<script>
 
-    /**
-     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function () { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://web1-2.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
-    Disqus.</a></noscript>
 </p>
 </body>
 </html>
